Bump Kotlin extension to version 1.1.0-SNAPSHOT